--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -51,4 +51,12 @@
   &__input {
     margin-bottom: 24px;
   }
+
+  &__button {
+    display: block;
+    margin: 0 auto;
+    width: 281px;
+    height: 53px;
+    margin-bottom: 8px;
+  }
 }
