--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -1,17 +1,25 @@
 .pagination {
-  display: inline-block;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 32px;
-  margin-bottom: 32px;
+  gap: 16px;
+  margin-top: 16px;
+
+  @media screen and (min-width: $bp-tablet) {
+    gap: 24px;
+    margin-top: 32px;
+  }
 
   &__button {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 8px;
+    height: 8px;
     background-color: var(--color-secondary-dray);
     border-radius: 50%;
+
+    @media screen and (min-width: $bp-tablet) {
+      width: 12px;
+      height: 12px;
+    }
 
     &--activ {
       background-color: var(--color-primary-light);
