--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -7,7 +7,11 @@
     url(../img/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 88px 0 48px 0;
+  padding: 50px 0 48px 0;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding: 88px 0 20px 0;
+  }
 
   &__size {
     width: 210px;
