--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -18,7 +18,7 @@
 
   @media screen and (min-width: $bp-desktop) {
     background-position: right;
-    padding: 200px;
+    padding: 150px;
   }
 
   // &::after {
@@ -27,14 +27,10 @@
   //   bottom: -1px;
   //   left: 0;
   //   width: 100%;
-  //   height: 400px;
-  //   background-image: url(../img/wave-22.svg);
-  //   transform: rotate(180deg);
-  //   background-size: cover;
-  //   background-color: white;
-  //   overflow: hidden;
+  //   height: 107px;
+  //   background-image: url(../img/wave-15.png);
 
-  // box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+  //   background-size: cover;
   // }
 
   @media screen and (min-device-pixel-ratio: 2),
