--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -23,4 +23,18 @@
   &__icon {
     fill: var(--color-primary-dark);
   }
+
+  &__nav {
+    padding: 16px 0 32px 20px;
+  }
+
+  &__link {
+    font-size: 14px;
+    margin-bottom: 16px;
+  }
+
+  &__address {
+    display: flex;
+    gap: 16px;
+  }
 }
